--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     GitHub</a>
             </div>
         </section>
-        <img class="hallanrsantos" src="./img/hallanSantos.png" alt="Foto de Hallan Santos" height="300" width="300">
+        <img class="hallanrsantos" src="./img/hallanSantos.png" alt="Foto de Hallan Santos">
     </main>
  
     <footer class="rodape">
