--- a/projetos.html
+++ b/projetos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mim</title>
     <link rel="stylesheet" href="./estilos/style.css">
-   
+    <link rel="stylesheet" href="responsive.css">
 </head>
 
 <body>
@@ -19,18 +19,14 @@
     </header>
     <main>
 
-
         <section class="projetos">
             <div class="container">
-
                 <div class="projeto">
-                    <img src="img/projeto1.png" alt="Descrição do projeto 1" width="250" height="250">
+                    <img src="img/projeto1.png" alt="Descrição do projeto 1" width="290" height="250">
                         <p class="tamanhoTextoDescricao"> 
                             <h2> <strong> Projeto 1: Colizão entre carros </strong> </h2>
                             <br>
-                            <p> Neste projeto o Zoro precisava se esquivar <br>
-                                 de todos os carros e se houver uma colisão,<br>
-                                 o jogo encerra! <p>
+                            <p> Neste projeto o Zoro precisava se esquivar de todos os carros e se houver uma colisão, o jogo encerra! <p>
                         </p>
                 </div>
 
@@ -39,23 +35,22 @@
                     <p class="tamanhoTextoDescricao"> 
                         <h2> <strong> Projeto 2: Criação de Fórmulário </strong> </h2>
                         <br>
-                        <p > Neste projeto criei um formulário para <br>
-                            inscrição de participantes do projeto Trilhas Inova </p>
+                        <p> Neste projeto criei um formulário para inscrição de participantes do projeto Trilhas Inova. </p>
                     </p>
                 </div>
+
                 <div class="projeto">
                     <img src="img/projeto3.png" alt="Descrição do projeto 3" width="320" height="250">
                     <p class="tamanhoTextoDescricao"> 
                         <h2> <strong> Projeto 3: Jogo do Número Secreto </strong> </h2>
                         <br>
-                        <p> O usuário escolheria entre um número de <br>
-                            1 a 10 até tentar adivinhar o número secreto </p>
+                        <p> O usuário escolheria entre um número de 1 a 10 até tentar adivinhar o número secreto. </p>
                     </p>
                 </div>
             </div>
         </section>
     </main>
-
+    <br><br>
     <footer class="rodape">
         <p>
             <strong>
