--- a/index.html
+++ b/index.html
@@ -18,8 +18,21 @@
             <a class="cabecalho__menu__link" href="sobreMim.html">Sobre mim</a>
             <a class="cabecalho__menu__link" href="projetos.html">Projetos</a>
         </nav>
-            </header>
 
+
+        <nav class="menu__mobile invisivel">
+           <ul class="lista__menu">
+              <a class="link__mobile" href="index.html">Home</a>
+              <a class="link__mobile" href="sobreMim.html">Sobre mim</a>
+              <a class="link__mobile" href="projetos.html">Projetos</a>
+           </ul>
+
+        </nav>
+        <button class="butao__menu" onclick="">
+            <img class="imagem__menu" src="img/menuHamburguer.png" alt="">
+        </button>
+
+    </header>
 
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
@@ -46,5 +59,6 @@
             </strong>
         </p>
     </footer>
+    <script src="portifolio.js"></script>
 </body>
 </html>
